fix: update contrast theme link color

--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -8,9 +8,9 @@ $muted-text-color: $text-color !default;
 $primary-color: #1794e0 !default;
 $border-color: mix(#fff, $text-color, 75%) !default;
 $footer-background-color: #000 !default;
-$link-color: #000 !default;
-$link-color-visited: #6b6b6b;
-$link-color-hover: #1794e0;
+$link-color: #de230d !default;
+$link-color-visited: #b7b7b7;
+$link-color-hover: #911608;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
